Iterator design patter for the Database has been added